# iib-stats-writer-statsd

./: .gitignore  CMakeLists.txt  Compat.hpp  Makefile.aix  README-AIX.md  README.md  StatsdStatsWriter.cpp  StatsdStatsWriter.hpp  UdpSocket.cpp  UdpSocket.hpp  conanfile.py  conanfile.txt
prebuilt/aix-7.1/: README.md  statsdsw-gcc630.lil  statsdsw-xlC13.lil
prebuilt/linux_x86/: statsdsw.lil
prebuilt/macosx/: statsdsw.lil
prebuilt/windows/: statsdsw.lil
test/: CMakeLists.txt  Makefile.aix  StatsdStatsWriter_UnitTest.cpp  test_main.cpp
